--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                     <label for="txtCodigoAutor">Código:</label>
                                 </div>
                                 <div class="col-9 col-md-6">
-                                <input required pattern="^[US|SM]{2}[IS|LI|LA]{2}[0-9]{6}$"
+                                <input required pattern="^[USIS|SM]{2}[IS|LI|LA]{2}[0-9]{6}$"
                                     title="Ingrese un codigo de autor valido" v-model="autor.codigo" type="text"
                                     class="form-control" name="txtCodigoAutor" id="txtCodigoAutor">
                             </div>
